finish CSS of M ain page

--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- * ~~~ Main style ~~~ * -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/ContactStyle.css">
 
     <!-- * ~~~ Media query ~~~ * -->
     <link rel="stylesheet" href="css/media.css">
@@ -79,68 +79,7 @@
     <main>
         <div id="finderSec" class="pt-70">
             <div class="container  ">
-                <form class="position-relative mb-70" action="">
-                    <input class="form-control fs-14 rounded-pill " placeholder="Find your location">
-                    <button type="submit"
-                        class="px-40 FormBtn fs-14 btn rounded-pill position-absolute bg-skyBlue">Find</button>
-                </form>
-
-                <div id="Forecast-table" class="mb-50 d-lg-flex rounded-3 overflow-hidden">
-                    <div id="TodayForecast" class="col-lg-4 ">
-                        <div class=" bg-gray-SemiDark p-10 d-flex justify-content-between align-items-center">
-                            <div class="day m-0">Tuesday</div>
-                            <div class="date m-0">24June</div>
-                        </div>
-                        <div class="bg-gray-light px-20 py-30">
-                            <div class="location fs-18">Cairo</div>
-                            <div class="text-white d-flex align-items-center d-flex flex-wrap">
-                                <div class="Degree me-30">29&deg;C</div>
-                                <div class="ConditionPic"><img src="images/sunny.png" alt=""></div>
-                            </div>
-                            <div class="ForecastCondition text-skyBlue py-20">Sunny</div>
-                            <ul class="d-flex flex-row flex-nowrap column-gap-4">
-                                <li>
-                                    <img src="images/rain perc.png" alt="">
-                                    <span class="RainPercentage">20%</span>
-                                </li>
-                                <li>
-                                    <img src="images/wind speed.png" alt="">
-                                    <span class="WindSpeed">18km/hr</span>
-                                </li>
-                                <li>
-                                    <img src="images/wind direction.png" alt="">
-                                    <span class="WindDirection">East</span>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div id="SecondDayForecast" class="NextDays col-lg-4 d-flex flex-column">
-                        <div class="bg-gray-dark p-10 text-center">
-                            <div class="day m-0">Tuesday</div>
-                        </div>
-                        <div class="bg-gray-SemiDark2 flex-grow-1 pt-50 px-20 pb-10">
-                            <div class="text-white text-center">
-                                <div class="ConditionPic mb-20"><img src="images/sunny.png" alt=""></div>
-                                <div class="Degree">34.2&deg;C</div>
-                                <div class="Degree2">34.2&deg;C</div>
-                            </div>
-                            <div class="Condition text-skyBlue py-20 text-center">Sunny</div>
-                        </div>
-                    </div>
-                    <div id="ThirdDayForecast" class="NextDays col-lg-4 d-flex flex-column">
-                        <div class="bg-gray-SemiDark p-10 text-center">
-                            <div class="day m-0">Tuesday</div>
-                        </div>
-                        <div class="bg-gray-light flex-grow-1 pt-50 px-20 pb-10">
-                            <div class="text-white text-center">
-                                <div class="ConditionPic mb-20"><img src="images/sunny.png" alt=""></div>
-                                <div class="Degree">34.2&deg;C</div>
-                                <div class="Degree2">34.2&deg;C</div>
-                            </div>
-                            <div class="Condition text-skyBlue py-20 text-center">Sunny</div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </main>
