--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item navItems-borderBot">
-                        <a class="nav-link text-white active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link text-white" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item navItems-borderBot">
                         <a class="nav-link text-white" href="#">News</a>
@@ -66,7 +66,7 @@
                         <a href="" class="nav-link text-white">Photos</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Contact.html" class="nav-link text-white">Contact</a>
+                        <a href="Contact.html" class="nav-link text-white active">Contact</a>
                     </li>
                 </ul>
 
@@ -79,7 +79,7 @@
             <div class="bg-gray-SemiDark2 px-30 py-20 rounded-pill" style="--bs-breadcrumb-divider: '-->';"
                 aria-label="breadcrumb">
                 <ol class="breadcrumb m-0">
-                    <li class="breadcrumb-item"><a class="homeBread" href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a class="homeBread" href="index.html">Home</a></li>
                     <li class="breadcrumb-item active " aria-current="page">Contact</li>
                 </ol>
             </div>
